--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "my-server -p 3030",
+    "start": "react-scripts start",
     "cy:run": "cypress run",
-    "test": "start-server-and-test start http://localhost:3030 cy:run",
+    "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start https-get://localhost:3000 cy:run",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
