--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "cy:run": "cypress run",
-    "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start https-get://localhost:3000 cy:run",
+    "test": "start-server-and-test start-server https-get://localhost:3000 cy:run",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
