--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,15 @@ deploy:
   skip_cleanup: true
   apt:
     packages:
-      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
       - libgconf-2-4
 cache:
-  # Caches $HOME/.npm when npm ci is default script command
-  # Caches node_modules in all other cases
   npm: true
   directories:
-    # we also need to cache folder with Cypress binary
     - ~/.cache
 install:
   - npm ci
+  - npm run build
+before_script:
+  - npm start -- --silent &
 script:
   - $(npm bin)/cypress run
